# feedcatter

./: LICENSE  README.md  suggestion-bench-data.sql
feedcatter-go/: README.md  benchmark-breakpoint.js  benchmark-create.js  benchmark-suggest.js  feedcatter_server.go  food.go  food_repository.go  food_suggester.go  food_suggester_test.go  go.mod  go.sum
feedcatter-go/cmd/: server.go
feedcatter-go/feedcatter/: food.pb.go  food.proto  service.pb.go  service.proto  service_grpc.pb.go
feedcatter-grpc/: Package.resolved  Package.swift  README.md  benchmark-breakpoint.js  benchmark-create.js  benchmark-suggest.js
feedcatter-grpc/Sources/: Feedcatter.swift  FeedcatterGrpc+Server.swift  FeedcatterService.swift
feedcatter-grpc/Sources/Domain/: FoodSuggester.swift
feedcatter-grpc/Sources/Protos/: food.proto  grpc-swift-proto-generator-config.json  service.proto
feedcatter-grpc/Sources/Repositories/: FoodRepository.swift
feedcatter-tonic/: Cargo.toml  README.md  benchmark-create.js  benchmark-suggest.js
feedcatter-tonic/proto/: food.proto  service.proto
feedcatter-tonic/src/: food.rs  food_repository.rs  food_suggester.rs  server.rs
feedcatter-vapor/: Dockerfile  Package.resolved  Package.swift  README.md  benchmark-breakpoint.js  benchmark-create.js  benchmark-suggest.js  docker-compose.yml
feedcatter-vapor/Sources/FeedcatterVapor/: configure.swift  routes.swift
feedcatter-vapor/Sources/FeedcatterVapor/Controllers/: FoodController.swift
feedcatter-vapor/Tests/FeedcatterVaporTests/: FeedcatterVaporTests.swift  FoodSuggesterTests.swift
(+7 files in other folders)
