[package]
name = "feedcatter-tonic"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "*"

[[bin]] # Bin to run the Feedcatter gRPC server
name = "feedcatter-server"
path = "src/server.rs"
