[package]
name = "feedcatter-tonic"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
time = "0.3.41"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "time" ] }

[build-dependencies]
tonic-build = "*"

[[bin]] # Bin to run the Feedcatter gRPC server
name = "feedcatter-server"
path = "src/server.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3